<?xml version="1.0" encoding="UTF-8"?>
<!--
 * "THE BEER-WARE LICENSE" (Revision 42):
 * <eckelundgren@gmail.com> wrote this file.  As long as you retain this notice you
 * can do whatever you want with this stuff. If we meet some day, and you think
 * this stuff is worth it, you can buy me a beer in return.   Eskil
  -->
<resources xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">FindWayHome</string>
    <string name="action_set_current_location">Set location</string>
    <string name="action_about">About</string>

    <string name="permissions_are_mandatory">This is a navigation app. When the app is not granted access to the GPS and compass, this app will not be able to navigate.</string>

    <string name="disclaimer_header_text">Welcome to the %1$s app, an easy-to-use navigation app that points you to the destination of your choice.\nBut please be aware that this app just points you in the direction of your destination, it does not necessarily point you in the safest or even accessible way. Always be aware of your surroundings and prioritize your safety. You are using this app at your own risk and responsibility. Be safe and enjoy the app.</string>
    <string name="i_understand">I understand that I am using this app at my own risk</string>
    <string name="continue_text">Continue</string>

    <string name="destination_set">The destination has successfully been set to your current location.</string>

    <string name="set_destination_now_question">Would you like to set the destination to your current location now?</string>
    <string name="set_destination_yes">Yes</string>
    <string name="set_destination_later">Later</string>

    <string name="about_general_header_text">General</string>
    <string name="about_general_body_text">%1$s is a very easy to use navigation app that simply points an arrow to your set destination. When you are at your preferred destination (e.g. at home, at your camp site or at your parked car), choose \"Set location\" and the arrow will always point to that destination.</string>
    <string name="about_privacy_header_text">Privacy</string>
    <string name="about_privacy_body_text">This app does not store your saved destination anywhere else but locally on your device. It is NEVER uploaded anywhere. If you clear the apps data or delete the app, your set destination is gone. However, just like any other app found on Google Play, crashes and anonymous usage data can be uploaded to help in improving the app.</string>
    <string name="about_version_info_header_text">Version Info</string>
    <string name="about_version_info_body_text">Version 1.3</string>

    <string name="okay_text">OK</string>
    <string name="cancel_text">Cancel</string>

    <string name="distance_meters">Distance: %1$s meters</string>
    <string name="distance_kilometers">Distance: %1$s kilometers</string>

    <string name="gps_is_disabled_text">GPS is disabled in your device. Would you like to enable it?</string>
    <string name="goto_gps_settings_text">Goto GPS Settings</string>
    <string name="compass_is_disabled_text">Compass sensor does\'t exist on your device.</string>

    <string name="accessibility_fab_button_main">open options</string>
    <string name="accessibility_fab_button_about">about</string>
    <string name="accessibility_fab_button_set_destination">set location</string>
    <string name="accessibility_arrow">arrow pointing to your set destination</string>

    <string name="waiting_for_gps_signal">Waiting for GPS signal…</string>
</resources>